--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="{{ url_for('index') }}">
                 <img src="{{ url_for('static', filename='pictures/logo.png') }}" alt="Logo" height="30" class="me-2">
-                <span>Keywords Extraction</span>
+                <span>VietNamese Keywords Extraction</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
