--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
         <div class="col-md-10 col-lg-9">
             <div class="card shadow-lg border-0 rounded-4 overflow-hidden">
                 <div class="card-header text-center py-4">
-                    <h4 class="card-title mb-0 fw-bold">Keywords Extraction Dashboard</h4>
+                    <h4 class="card-title mb-0 fw-bold">VietNamese Keywords Extraction Dashboard</h4>
                 </div>
                 <div class="card-body p-4">
                     <form id="prediction-form" method="POST" class="needs-validation mb-5" novalidate>
